partially fixing overflow (taking also padding into account)

--- a/packages/components/grid/src/grid.scss
+++ b/packages/components/grid/src/grid.scss
@@ -572,9 +572,9 @@ tfoot {
   }
 
   sl-tool-bar {
-    background: inherit;
-    flex: 1 1 0;
-    min-inline-size: 0;
+    // background: inherit;
+    // flex: 1 1 0;
+    // min-inline-size: 0;
     padding-block: var(--sl-size-100);
   }
 }
